--- a/.github/workflows/build-push-image-to-gcr.yml
+++ b/.github/workflows/build-push-image-to-gcr.yml
@@ -8,7 +8,7 @@ on:
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
-  IMAGE_NAME: same3na_migration
+  IMAGE_NAME: same3na_migrations
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
